[gd_scene load_steps=9 format=2]

[ext_resource path="res://dodge_assets/art/glowCircle.png" type="Texture" id=1]
[ext_resource path="res://dodge_assets/art/spark.png" type="Texture" id=2]
[ext_resource path="res://scenes/PlayerPowerUp.gd" type="Script" id=3]
[ext_resource path="res://dodge_assets/art/8_BIT_[50_SFX]_Powerup_Free_Sound_Effects_N1_BY_jalastram/SFX_Powerup_02.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 80.399

[sub_resource type="Animation" id=2]
resource_name = "Shock"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shock:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 4, 4, 0, 1, 7, 1, 7, 0, 7, 0, 0, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shock"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shock:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 4, 4, 0, 1, 2, 3, 7, 5, 6, 7, 7 ]
}

[node name="PlayerPowerUp" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="Shock" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
hframes = 4
vframes = 2
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shock = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimeupTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
__meta__ = {
"_editor_description_": "s"
}

[node name="TimeupWarnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 3 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
anims/Shock = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_PlayerPowerUp_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimeupTimer" to="." method="_on_TimeupTimer_timeout"]
[connection signal="timeout" from="TimeupWarnTimer" to="." method="_on_TimeupWarnTimer_timeout"]
